--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Page Not Found</title>
-    <link rel="icon" type="image/png" href="/assets/logo2.png">
-</head>
-<body>
+    <link rel="icon" type="image/png" href="/assets/logo2.png" />
+  </head>
+  <body>
     <h1>404 - Page Not Found</h1>
     <p>The requested page could not be found.</p>
-</body>
+  </body>
 </html>
