--- a/views/secondHand/add-product.ejs
+++ b/views/secondHand/add-product.ejs
@@ -1,71 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title><%= pageTitle %></title>
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/forms.css">
-  <link rel="stylesheet" href="/css/chatbot.css">
-  <link rel="stylesheet" href="/css/product.css">
-  <link rel="icon" type="image/png" href="/assets/logo2.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title><%= pageTitle %></title>
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/forms.css" />
+    <link rel="stylesheet" href="/css/chatbot.css" />
+    <link rel="stylesheet" href="/css/product.css" />
+    <link rel="icon" type="image/png" href="/assets/logo2.png" />
+  </head>
+  <body>
+    <%- include('../common/navigation.ejs') %> <%-
+    include('../common/chatbot.ejs') %>
 
-</head>
-<body>
-  <%- include('../common/navigation.ejs') %>
-  <%- include('../common/chatbot.ejs') %>
+    <main>
+      <form
+        class="product-form"
+        action="/secondHand/sell/add-product"
+        method="POST"
+        enctype="multipart/form-data"
+      >
+        <div class="form-control">
+          <label for="title">Product Name</label>
+          <input type="text" name="title" id="title" required />
+        </div>
 
-  <main>
+        <div class="form-control">
+          <label for="image">Upload Images</label>
+          <input
+            type="file"
+            name="images"
+            id="images"
+            accept="image/*"
+            multiple
+            required
+          />
+        </div>
 
-    <form class="product-form" action="/secondHand/sell/add-product" method="POST" enctype="multipart/form-data">
-
-      <div class="form-control">
-        <label for="title">Product Name</label>
-        <input type="text" name="title" id="title" required>
-      </div>
-
-      <div class="form-control">
-        <label for="image">Upload Images</label>
-        <input type="file" name="images" id="images" accept="image/*" multiple required>
-      </div>
-
-      <div class="form-control">
-        <label for="price">Original Purchase Price
-            <span class="tooltip-icon"> ⓘ
-                <span class="tooltip-text">The price at which the product was originally purchased</span>
+        <div class="form-control">
+          <label for="price"
+            >Original Purchase Price
+            <span class="tooltip-icon">
+              ⓘ
+              <span class="tooltip-text"
+                >The price at which the product was originally purchased</span
+              >
             </span>
-        </label>
-        <input type="number" name="price" id="price" step="0.01" required>
-      </div>
+          </label>
+          <input type="number" name="price" id="price" step="0.01" required />
+        </div>
 
-      <div class="form-control">
-        <label for="min_price">Minimum Auction Price</label>
-        <input type="number" name="min_price" id="min_price" step="0.01" required>
-      </div>
+        <div class="form-control">
+          <label for="min_price">Minimum Auction Price</label>
+          <input
+            type="number"
+            name="min_price"
+            id="min_price"
+            step="0.01"
+            required
+          />
+        </div>
 
-      <div class="form-control">
-        <label for="startDate">Start Date</label>
-        <input type="date" name="startDate" id="startDate" required>
-      </div>
+        <div class="form-control">
+          <label for="startDate">Start Date</label>
+          <input type="date" name="startDate" id="startDate" required />
+        </div>
 
-      <div class="form-control">
-        <label for="endDate">End Date</label>
-        <input type="date" name="endDate" id="endDate" required>
-      </div>
-      
-      <div class="form-control">
-        <label for="description">Description</label>
-        <textarea name="description" id="description" rows="5" required></textarea>
-      </div>
+        <div class="form-control">
+          <label for="endDate">End Date</label>
+          <input type="date" name="endDate" id="endDate" required />
+        </div>
 
-      <div class="form-control">
-        <label for="location">Location</label>
-        <textarea name="location" id="location" rows="5" required></textarea>
-      </div>
+        <div class="form-control">
+          <label for="description">Description</label>
+          <textarea
+            name="description"
+            id="description"
+            rows="5"
+            required
+          ></textarea>
+        </div>
 
-      <button class="btn" type="submit">Create Auction</button>
-    </form>
-  </main>
-</body>
+        <div class="form-control">
+          <label for="location">Location</label>
+          <textarea name="location" id="location" rows="5" required></textarea>
+        </div>
+
+        <button class="btn" type="submit">Create Auction</button>
+      </form>
+    </main>
+  </body>
 </html>
