--- a/views/secondHand/secondHandHome.ejs
+++ b/views/secondHand/secondHandHome.ejs
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title><%= pageTitle %></title>
-    <link rel="stylesheet" href="/css/chatbot.css">
-    <!-- <link rel="stylesheet" href="/css/main.css"> -->
-    <link rel="stylesheet" href="/css/product.css">
-    <link rel="stylesheet" href="/css/rentalStyles.css">
-    <link rel="icon" type="image/png" href="/assets/logo2.png">
+    <link rel="stylesheet" href="/css/chatbot.css" />
+    <link rel="stylesheet" href="/css/product.css" />
+    <link rel="stylesheet" href="/css/rentalStyles.css" />
+    <link rel="icon" type="image/png" href="/assets/logo2.png" />
+  </head>
 
+  <%- include('../common/navigation.ejs') %> <%-
+  include('../common/chatbot.ejs') %>
 
-</head>
-
-<%- include('../common/navigation.ejs') %>
-<%- include('../common/chatbot.ejs') %>
-
-<div class="renting-container">
+  <div class="renting-container">
     <h1>Second-Hand Chain Buying Options</h1>
     <p>Choose an option to proceed</p>
 
     <div class="options">
-        <div class="option">
-            <h2>Want to Post Something?</h2>
-            <p>List your item for sale and find interested buyers easily</p>
-            <button onclick="window.location.href='/secondHand/sell'">Post an Item to Sell</button>
-        </div>
+      <div class="option">
+        <h2>Want to Post Something?</h2>
+        <p>List your item for sale and find interested buyers easily</p>
+        <button onclick="window.location.href='/secondHand/sell'">
+          Post an Item to Sell
+        </button>
+      </div>
 
-        <div class="option">
-            <h2>Want to Buy Something?</h2>
-            <p>Browse available items for sale and get what you need</p>
-            <button onclick="window.location.href='/secondHand/buy'">Buy an Item</button>
-            <span class="info-icon">i</span>
-        </div>
+      <div class="option">
+        <h2>Want to Buy Something?</h2>
+        <p>Browse available items for sale and get what you need</p>
+        <button onclick="window.location.href='/secondHand/buy'">
+          Buy an Item
+        </button>
+        <span class="info-icon">i</span>
+      </div>
     </div>
-</div>
+  </div>
+</html>
