--- a/views/subscription-auction-details.ejs
+++ b/views/subscription-auction-details.ejs
@@ -12,7 +12,7 @@
 
   <style>
 
-    /* Button Styling */
+    
     button {
       background-color: #4b6043;
       color: white;
@@ -39,7 +39,7 @@
     }
 
 
-    /* Disabled Button */
+   
     .disabled-button, button:disabled {
       background-color: #ccc;
       cursor: not-allowed;
@@ -49,7 +49,7 @@
       background-color: #ccc;
     }
 
-    /* No Bids Message */
+    
     .no-bids {
       text-align: center;
       padding: 20px;
@@ -269,12 +269,11 @@
 <script>
   function handleBidAcceptance(event, selectedPaymentId, selectedBidAmount) {
     console.log("hitting handle function");
-    event.preventDefault(); // Prevent default behavior
+    event.preventDefault(); 
     if (!confirm("Are you sure you want to accept this bid? All other bids will be refunded.")) {
       return;
     }
     console.log("User confirmed bid acceptance. Processing refunds...");
-    // Submit the form that contains the clicked button:
     event.target.closest('form').submit();
 }
 
