--- a/views/verification-error.ejs
+++ b/views/verification-error.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Verification Error</title>
-    <link rel="icon" type="image/png" href="/assets/logo2.png">
-</head>
-<body>
+    <link rel="icon" type="image/png" href="/assets/logo2.png" />
+  </head>
+  <body>
     <h1>Verification Failed</h1>
-    <p>Invalid or expired verification link. <a href="/api/auth/signup">Try signing up again</a></p>
-</body>
+    <p>
+      Invalid or expired verification link.
+      <a href="/api/auth/signup">Try signing up again</a>
+    </p>
+  </body>
 </html>
