--- a/views/verification-success.ejs
+++ b/views/verification-success.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Email Verified</title>
-    <link rel="icon" type="image/png" href="/assets/logo2.png">
-</head>
-<body>
+    <link rel="icon" type="image/png" href="/assets/logo2.png" />
+  </head>
+  <body>
     <h1>Email Verified Successfully!</h1>
     <p>Your account is now active. <a href="/api/auth/login">Login here</a></p>
-</body>
+  </body>
 </html>
